--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Arbeitsdienst eintragen</title>
+<title>Arbeitsdienst eintragen - 2.0</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <style>
 body { font-family: Arial, sans-serif; margin: 20px; max-width: 700px; }
@@ -47,8 +47,8 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 
 <script>
   // Supabase initialisieren
-  const supabaseUrl = "https://DEINPROJEKT.supabase.co"; // <--- DEIN URL
-  const supabaseAnonKey = "DEIN_PUBLIC_ANON_KEY";         // <--- DEIN ANON KEY
+  const supabaseUrl = "https://hteeyyfsaotcavvtvizt.supabase.co"; // <--- DEIN URL
+  const supabaseAnonKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";         // <--- DEIN ANON KEY
   const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
   const authDiv = document.getElementById("auth");
@@ -147,4 +147,5 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
