--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Arbeitsdienst eintragen - 2.0</title>
+<title>Arbeitsdienst eintragen</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <style>
 body { font-family: Arial, sans-serif; margin: 20px; max-width: 700px; }
@@ -13,7 +13,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </head>
 <body>
 
-<h1>Arbeitsdienste Vereinsverwaltung</h1>
+<h1>Arbeitsdienste Vereinsverwaltung - 1.0</h1>
 
 <div id="auth">
   <h2>Login</h2>
@@ -147,5 +147,6 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
