--- a/index.html
+++ b/index.html
@@ -60,9 +60,16 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
   document.getElementById("loginBtn").addEventListener("click", async () => {
     const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
-    const { data, error } = await supabase.auth.signInWithPassword({ email, password });
-    if(error) { authMessage.textContent = "Fehler: " + error.message; }
-    else { initUserArea(data.user); }
+    try{
+      const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+      console.log("Suprabase login data:", data);
+      console.log("Supabase login error:", error);
+      
+      if(error) { authMessage.textContent = "Fehler: " + error.message;
+      } else { initUserArea(data.user); 
+    } catch (err){
+      console.error("Unerwarteter Fehler:", err);
+    }
   });
 
   // Registrierung
@@ -147,6 +154,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
