--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </div>
 
 <script>
+ 
+  import { createClient } from '@supabase/supabase-js'
+  const supabaseUrl = 'https://hteeyyfsaotcavvtvizt.supabase.co'
+  const supabaseKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";
+  const supabase = createClient(supabaseUrl, supabaseKey)
+
+  
   // Supabase initialisieren
-  const supabaseUrl = "https://hteeyyfsaotcavvtvizt.supabase.co"; // <--- DEIN URL
-  const supabaseAnonKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";         // <--- DEIN ANON KEY
-  const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
+  //const supabaseUrl = "https://hteeyyfsaotcavvtvizt.supabase.co"; // <--- DEIN URL
+  //const supabaseAnonKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";         // <--- DEIN ANON KEY
+  //const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
   const authDiv = document.getElementById("auth");
   const userArea = document.getElementById("userArea");
@@ -154,6 +161,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
