--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
   </div>
 </div>
 
-<script>
+<script type="module">
  
   import { createClient } from '@supabase/supabase-js'
   const supabaseUrl = 'https://hteeyyfsaotcavvtvizt.supabase.co'
@@ -161,6 +161,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
