--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
       console.log("Supabase login error:", error);
       
       if(error) { authMessage.textContent = "Fehler: " + error.message;
-      } else { initUserArea(data.user); 
+      } else { initUserArea(data.user);} 
     } catch (err) {
       console.error("Unerwarteter Fehler:", err);
     }
@@ -161,6 +161,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
