--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 
 <script type="module">
  
-  import { createClient } from '@supabase/supabase-js'
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.33.0/dist/module/supabase.js";
   const supabaseUrl = 'https://hteeyyfsaotcavvtvizt.supabase.co'
   const supabaseKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";
   const supabase = createClient(supabaseUrl, supabaseKey)
@@ -161,6 +161,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
