--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
   const supabaseKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";
   const supabase = createClient(supabaseUrl, supabaseKey)
 
+  console.log("Supabase Client geladen:", supabase);
   
   // Supabase initialisieren
   //const supabaseUrl = "https://hteeyyfsaotcavvtvizt.supabase.co"; // <--- DEIN URL
@@ -161,6 +162,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
