--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
   </div>
 </div>
 
-<script type="module">
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
+<script>
  
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.33.0/dist/module/supabase.js";
   const supabaseUrl = 'https://hteeyyfsaotcavvtvizt.supabase.co'
@@ -162,6 +163,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
