--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
-<script>
- 
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.33.0/dist/module/supabase.js";
+<script type="module">
+  
+  import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
   const supabaseUrl = 'https://hteeyyfsaotcavvtvizt.supabase.co'
   const supabaseKey = "sb_publishable_pm6p0UM8_GARF3TIY51Heg_Sk3tacHJ";
   const supabase = createClient(supabaseUrl, supabaseKey)
@@ -163,6 +162,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
