--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </head>
 <body>
 
-<h1>Arbeitsdienste Vereinsverwaltung - 0.4</h1>
+<h1>Arbeitsdienste Vereinsverwaltung - 0.5</h1>
 
 <div id="auth">
   <h2>Login</h2>
@@ -39,9 +39,9 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
     <ul id="hoursList"></ul>
   </div>
 
-  <div id="tasksList">
+  <div id="tasks">
     <h3>Arbeitsdienste Übersicht</h3>
-    <ul id="taskList"></ul>
+    <ul id="task"></ul>
   </div>
 </div>
 
@@ -286,6 +286,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
