--- a/index.html
+++ b/index.html
@@ -140,24 +140,11 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
     loadMyHours();
     loadTasks();
   }
-
-  // Arbeitsdienst eintragen (Stunden speichern)
-  //document.getElementById("saveWorkBtn").addEventListener("click", async () => {
-  //  const date = document.getElementById("workDate").value;
-  //  const hours = parseFloat(document.getElementById("workHours").value);
-  //  const desc = document.getElementById("workDesc").value;
-
-  //  const { error } = await supabase.from("work_hours").insert([{
-  //    user_id: supabase.auth.getUser().data.user.id,
-  //    date, hours, description: desc
-  //  }]);
-
-  //  if(error) { alert("Fehler: " + error.message); }
-  //  else { loadMyHours(); }
-  //});
-
+  
+  //---------------------------------------------------------------------------
   //Arbeitsdienst eintragen (Stunden speichern)
-
+  //---------------------------------------------------------------------------
+  
   document.getElementById("saveWorkBtn").addEventListener("click", async () => {
   const date = document.getElementById("workDate").value;
   const hours = parseFloat(document.getElementById("workHours").value);
@@ -197,7 +184,9 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
   }
   });
 
+  //----------------------------------------------------------------------------
   // Eigene Stunden laden
+  //----------------------------------------------------------------------------
   async function loadMyHours() {
     const { data, error } = await supabase.from("work_hours")
       .select("*")
@@ -213,30 +202,16 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
     }
   }
 
-  // Arbeitsdienste laden
-  //async function loadTasks() {
-  //  const { data, error } = await supabase.from("tasks")
-  //    .select("*")
-  //    .order("task_date", { ascending: true });
-  //  const list = document.getElementById("taskList");
-  //  list.innerHTML = "";
-  //  if(data) {
-  //    data.forEach(t => {
-  //      const li = document.createElement("li");
-  //      li.className = "task";
-  //      li.innerHTML = `<strong>${t.title}</strong> (${t.task_date})<br>${t.description}`;
-  //      list.appendChild(li);
-  //    });
-  //  }
-  //}
-
+  //-----------------------------------------------------------------------------------
   // Prüfen, ob User schon eingeloggt
+  //-----------------------------------------------------------------------------------
   supabase.auth.onAuthStateChange((event, session) => {
     if(session && session.user) { initUserArea(session.user); }
   });
 
-
+  //-----------------------------------------------------------------------------------
   // Funktion, um die verfügbaren Arbeitsdienste zu laden
+  //-----------------------------------------------------------------------------------
   async function loadTasks() {
   const tasksDiv = document.getElementById("tasks");
   tasksDiv.innerHTML = "Lade Arbeitsdienste...";
@@ -263,6 +238,8 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
     const used = task.work_task_signups[0].count;
     const free = task.max_helpers - used;
 
+    const div = document.createElement("div");
+
     tasksDiv.innerHTML += `
       <div class="task">
         <h3>${task.title}</h3>
@@ -285,6 +262,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
