--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
       title,
       start_time,
       max_helpers,
-      work_task_signups (
+      work_task_signups!inner (
         id,
-        profiles (
+        profiles!inner (
           display_name
         )
       )
@@ -291,6 +291,7 @@ input, textarea, button { display:block; margin: 10px 0; padding:5px; width: 100
 </script>
 </body>
 </html>
+
 
 
 
